# vulkan_scene

./: BUILD.md  CMakeLists.txt  README.md  TODO vk_scene.txt
shaders/: scene.frag  scene.vert  shadow.frag  shadow.vert  ui.frag  ui.vert
src/: AudioManager.cpp  AudioManager.h  Common.h  DevConsole.cpp  DevConsole.h  Game.cpp  Game.h  SaveSystem.cpp  SaveSystem.h  Settings.cpp  Settings.h  main.cpp  resource.rc
src/game/: ActiveEffects.h  CrateSpawner.cpp  CrateSpawner.h  CursedObjects.cpp  CursedObjects.h  DayNight.h  Freecam.cpp  Freecam.h  ItemSystem.cpp  ItemSystem.h  NPCShop.cpp  NPCShop.h  PhysicsCube.cpp  PhysicsCube.h  Player.cpp  Player.h  TitleCamera.cpp  TitleCamera.h
src/renderer/: AssetManager.cpp  AssetManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/scene/: Scene.cpp  Scene.h  WorldDecorations.cpp  WorldDecorations.h
src/ui/: Font.h  UIBatch.h
